--- a/AccountSim/HomeView/HomeBaseViewController.storyboard
+++ b/AccountSim/HomeView/HomeBaseViewController.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhI-YF-heK">
+                            <containerView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhI-YF-heK">
                                 <rect key="frame" x="0.0" y="88" width="375" height="646"/>
                                 <connections>
                                     <segue destination="FEQ-NR-F2G" kind="embed" id="DVL-aP-VWA"/>
@@ -24,13 +24,23 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EW6-q8-4Hv">
                                 <rect key="frame" x="0.0" y="734" width="375" height="49"/>
                                 <items>
-                                    <barButtonItem title="ヒント" id="hmV-4S-KzF"/>
+                                    <barButtonItem title="ヒント" id="hmV-4S-KzF">
+                                        <connections>
+                                            <action selector="ヒントボタン:" destination="OwE-Sk-w7e" id="iAi-sr-2sx"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOu-XP-Y0Y">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                 <items>
-                                    <navigationItem title="Title" id="vfh-a1-N3R"/>
+                                    <navigationItem title="ホーム" id="5o7-zk-HuC">
+                                        <barButtonItem key="leftBarButtonItem" title="終了" id="8qA-2z-m1d">
+                                            <connections>
+                                                <action selector="終了ボタン:" destination="OwE-Sk-w7e" id="BJH-Md-p3e"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -65,7 +75,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="646"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallpaper1" translatesAutoresizingMaskIntoConstraints="NO" id="7Rm-eO-gwO">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallpaper1" translatesAutoresizingMaskIntoConstraints="NO" id="7Rm-eO-gwO">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="646"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="SmP-ob-Sqc"/>
